fixed img overflows the div in mobile

--- a/frontend/assets/styles.css
+++ b/frontend/assets/styles.css
@@ -129,6 +129,12 @@ h1 {
     height: 128px;
   }
 
+  /*img#qr must fit the #qr-container when rendered*/
+  img#qr {
+    width: 100%;
+    height: 100%;
+  }
+
   /* Adjust the font size of the QR code heading on smaller screens */
   .qr-display h3 {
     font-size: 1.5rem;
